--- a/index.css
+++ b/index.css
@@ -17,6 +17,53 @@ body {
   margin: 0;
 }
 
+body#backgroundImage{
+  background-image: url('data/img/bg.png');
+}
+
+div#questionTextarea{
+  font-family: Times New Roman;
+  font-size: 30px;
+  text-align: center;
+  color: #ffffff;
+}
+
+p#scoreId{
+  color: #ffffff;
+font-family: Times New Roman;
+
+  font-size: 18px;
+}
+
+button#factButton.btn.btn-success{
+  display: table-cell;
+width: 100%;
+height: 100%;
+text-align: center;
+vertical-align: center;
+font-size: 20px;
+}
+div.mainGameDiv{
+
+  align-content: center;
+padding-top: 60px;
+}
+button#mythButton.btn.btn-danger{
+  display: table-cell;
+width: 100%;
+height: 100%;
+text-align: center;
+vertical-align: center;
+font-size: 20px;
+}
+
+input#ScoreValue{
+  width: 30px;
+text-align: center;
+background-color: rgba(30, 179, 46, 0.83);
+
+}
+
 #screen canvas {
   margin: auto;
   /* Hide the gap for font descenders. */
@@ -44,9 +91,9 @@ body {
   font-family: 'gamefont';
   src: url('data/css/gamefont.eot');
   src: url('data/css/gamefont.eot?#iefix') format('embedded-opentype'),
-     url('data/css/gamefont.woff') format('woff'),
-     url('data/css/gamefont.ttf') format('truetype'),
-     url('data/css/gamefont.svg#gamefont') format('svg');
+  url('data/css/gamefont.woff') format('woff'),
+  url('data/css/gamefont.ttf') format('truetype'),
+  url('data/css/gamefont.svg#gamefont') format('svg');
   font-weight: normal;
   font-style: normal;
 }
